--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
-requests~=2.31.0
-themoviedb~=0.4.0
+aiohttp==3.9.0
+aiosignal==1.3.1
+attrs==23.1.0
+certifi==2023.11.17
+dacite==1.8.1
+frozenlist==1.4.0
+idna==3.6
+multidict==6.0.4
+psycopg2-binary==2.9.9
+psycopg2-pool==1.1
+sentry-sdk==1.37.1
+tmdb-python==0.0.9
+urllib3==2.1.0
+yarl==1.9.3
