--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,8 @@ dacite==1.8.1
 frozenlist==1.4.0
 idna==3.6
 multidict==6.0.4
-psycopg2-binary==2.9.9
-psycopg2-pool==1.1
 sentry-sdk==1.37.1
 tmdb-python==0.0.9
 urllib3==2.1.0
 yarl==1.9.3
+postgres==4.0
